feat: make sidebar collapsible and add new hotkeys

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -265,6 +265,14 @@ button:disabled {
     overflow: hidden;
 }
 
+.sidebar.collapsed {
+    display: none;
+}
+
+.resizer.collapsed {
+    display: none;
+}
+
 
 .sidebar-header {
     display: flex;
